[package]
name = "bamboo-garden"
publish = false
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = { version = "0.5.3" }
axum = { version = "0.7.9", features = ["ws"] }
chrono = { version = "0.4.39", features = ["serde"] }
dotenv = "0.15.0"
log = "0.4.22"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = [
    "chrono",
    "derive",
    "macros",
    "migrate",
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    "uuid",
] }
thiserror = "2.0.6"
tokio = { version = "1.42.0", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }

[dev-dependencies]
httpmock = "0.7.0"
mockall = "0.13.1"
