[package]
name = "bamboo-garden"
publish = false
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = { version = "0.5.3" }
axum = { version = "0.7.9", features = ["form", "query", "tracing", "ws"] }
chrono = { version = "0.4.39", features = ["serde"] }
dotenv = "0.15.0"
garde = { version = "0.20.0", features = ["serde", "email", "url", "derive"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = [
    "chrono",
    "derive",
    "macros",
    "migrate",
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    "uuid",
] }
thiserror = "2.0.6"
tokio = { version = "1.42.0", features = ["full"] }
tower = "0.5.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.11.0", features = ["v4", "serde"] }

[dev-dependencies]
httpmock = "0.7.0"
mockall = "0.13.1"
